# PE-Parser

./: .gitignore  CMakeLists.txt
src/: main.cpp
src/parser/: pe_parser.cpp  pe_parser.h
